# geant4-myexample

myB1/: .gitignore  CMakeLists.txt  init_vis.mac  myB1.cc  vis.mac
myB1/include/: myB1DetectorConstrcution.hh  myB1DetectorConstruction.hh  myB1Phantom.hh
myB1/src/: myB1DetectorConstrcution.cc  myB1DetectorConstruction.cc  myB1Phantom.cc
